# swagger.yaml
@@ -1,7 +1,7 @@
 swagger: "2.0"
 info:
   title: Bank Argent API documentation
-  description: Proposal for API endpoints in this codebase
+  description: Contains all available API endpoints in this codebase
   version: "1.0.0"
   termsOfService: "http://swagger.io/terms/"
 host: localhost:3001
@@ -9,12 +9,115 @@ basePath: /api/v1
 schemes:
   - http
 paths:
-  /user/:accountId/transactions:
+  /user/login:
+    post:
+      tags:
+        - User Module
+      summary: Login
+      description: API for Login
+      parameters:
+        - in: body
+          name: body
+          description: Login Payload
+          required: true
+          schema:
+            $ref: "#/definitions/Login"
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Login Successfully
+          schema:
+            $ref: "#/definitions/LoginResponse"
+        "400":
+          description: Invalid Fields
+        "500":
+          description: Internal Server Error
+  /user/signup:
+    post:
+      tags:
+        - User Module
+      summary: Signup
+      description: API for Signup
+      parameters:
+        - in: body
+          name: body
+          description: Signup Payload
+          required: true
+          schema:
+            $ref: "#/definitions/User"
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Signup Successfully
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "400":
+          description: Invalid Fields
+        "500":
+          description: Internal Server Error
+  /user/profile:
+    post:
+      security:
+        - Bearer: []
+      tags:
+        - User Module
+      summary: User Profile API
+      description: API for fetching a user profile
+      parameters:
+        - in: header
+          name: Authorization
+          description: Attach Bearer JWT token
+          type: string
+          required: true
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: User profile retrieved successully
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "400":
+          description: Invalid Fields
+        "500":
+          description: Internal Server Error
+    put:
+      security:
+        - Bearer: []
+      tags:
+        - User Module
+      summary: User Profile API
+      description: API for updating a user profile
+      parameters:
+        - in: header
+          name: Authorization
+          description: Attach Bearer JWT token
+          type: string
+          required: true
+        - in: body
+          name: body
+          description: Update user profile attributes
+          required: true
+          schema:
+            $ref: "#/definitions/UserProfile"
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: User profile retrieved successully
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "400":
+          description: Invalid Fields
+        "500":
+          description: Internal Server Error
+  /user/transactions/{transactionsAccountID}:
     get:
       security:
         - Bearer: []
       tags:
-        - Transaction Module
+        - Transactions Module
       summary: User transactions API
       description: API for transactions
       parameters:
@@ -23,56 +126,56 @@ paths:
           description: Attach Bearer JWT token
           type: string
           required: true
+        - name: transactionsAccountID
+          in: path
+          description: Account transactions
+          type: integer
       produces:
         - application/json
       responses:
         "200":
           description: Successfully retrieved transactions
           schema:
-            $ref: "#/definitions/TransactionsResponse"
+            $ref: "#/definitions/TransactionsAccount"
         "400":
           description: Invalid Fields
         "500":
           description: Internal Server Error
-
-  /user/:accountId/transactions/:transactionId:
+  /user/transactions/{transactionsAccountID}/{transactionID}:
     get:
       security:
         - Bearer: []
       tags:
-        - Transaction Module
+        - Transactions Module
       summary: User transaction API
-      description: API for transaction
+      description: API for transaction details
       parameters:
         - in: header
           name: Authorization
           description: Attach Bearer JWT token
           type: string
           required: true
-
-        - in: path
-          name: transactionId
+        - name: transactionID
+          in: path
           required: true
-          description: Account transaction ID
+          description: Transaction details
           type: integer
-
       produces:
         - application/json
       responses:
         "200":
-          description: Sucessfullt retrieved details of transaction
+          description: Successfully retrieved transaction details
           schema:
-            $ref: "#/definitions/TransactionDetailsResponse"
+            $ref: "#/definitions/TransactionDetails"
         "400":
           description: Invalid Fields
         "500":
           description: Internal Server Error
-
     put:
       security:
         - Bearer: []
       tags:
-        - Transaction Module
+        - Transactions Module
       summary: Update transaction
       description: API to update transaction details
       parameters:
@@ -81,26 +184,85 @@ paths:
           description: Attach Bearer JWT token
           type: string
           required: true
-
-        - in: path
-          name: transactionsId
+        - name: transactionID
+          in: path
           required: true
-          description: Account transaction ID
-          type: integer
-
-        - in: body
-          name: Transaction Update
           description: Updated details
-          required: true
+          type: integer
+        - name: param
+          in: body
           schema:
-            $ref: "#/definitions/TransactionDetails"
+            $ref: "#/definitions/TransactionInformation"
       produces:
         - application/json
       responses:
         "200":
           description: Transaction update successful
           schema:
-            $ref: "#/definitions/TransactionDetailsResponse"
+            $ref: "#/definitions/TransactionMessage"
+        "400":
+          description: Invalid Fields
+        "500":
+          description: Internal Server Error
+    delete:
+      security:
+        - Bearer: []
+      tags:
+        - Transactions Module
+      summary: Delete User Transaction
+      description: API to delete transaction details
+      parameters:
+        - in: header
+          name: Authorization
+          description: Attach Bearer JWT token
+          type: string
+          required: true
+        - name: transactionID
+          in: path
+          required: true
+          description: Deteleted sucessfully
+          type: integer
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Transaction details deleted successfully
+          schema:
+            $ref: "#/definitions/TransactionMessage"
+
+        "400":
+          description: Invalid Fields
+        "500":
+          description: Internal Server Error
+    post:
+      security:
+        - Bearer: []
+      tags:
+        - Transactions Module
+      summary: User transaction details
+      description: API for transaction details
+      parameters:
+        - in: header
+          name: Authorization
+          description: Attach Bearer JWT token
+          type: string
+          required: true
+        - name: transactionID
+          in: path
+          required: true
+          description: Details created
+          type: integer
+        - name: param
+          in: body
+          schema:
+            $ref: "#/definitions/TransactionInformation"
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Transaction details successfully created
+          schema:
+            $ref: "#/definitions/TransactionMessage"
         "400":
           description: Invalid Fields
         "500":
@@ -112,38 +274,92 @@ securityDefinitions:
     name: Authorization
     in: header
 definitions:
-  TransactionsResponse:
-    type: object
-    items:
-      type: object
+  User:
     properties:
-      id:
+      email:
         type: string
-        description: Transaction ID
+        description: user email
+      password:
+        type: string
+        description: user password
+      firstName:
+        type: string
+        description: user first name
+      lastName:
+        type: string
+        description: user last name
+  Login:
+    properties:
+      email:
+        type: string
+        description: user email
+      password:
+        type: string
+        description: user password
+  ApiResponse:
+    type: object
+    properties:
+      status:
+        type: integer
+      message:
+        type: string
+      body:
+        type: object
+        properties:
+          id:
+            type: string
+          email:
+            type: string
+  LoginResponse:
+    type: object
+    properties:
+      token:
+        type: string
+  UserProfile:
+    type: object
+    properties:
+      firstName:
+        type: string
+      lastName:
+        type: string
+  TransactionsAccount:
+    type: object
+    properties:
       date:
         type: string
-        description: Date of transaction
+        description: transaction date
       description:
         type: string
-        description: Reason for transaction
+        description: description transaction
       amount:
         type: number
-        description: Amount of transaction
+        description: transaction amount
       balance:
         type: number
-        description: Account Balance
-
-  TransactionDetailsResponse:
+        description: account balance
+  TransactionDetails:
+    type: object
+    properties:
+      transactionType:
+        type: string
+        description: transaction type
+      category:
+        type: string
+        description: transaction category
+      notes:
+        type: string
+        description: transaction notes
+  TransactionMessage:
     type: object
     properties:
       id:
         type: string
-        description: Transaction ID
+        description: cransaction ID
       category:
         type: string
-        description: Category of transaction
+        description: category of transaction
       transaction_type:
         type: string
-      note:
+      message:
         type: string
-        description: Operation successful
+        description: operation successul
